# services-logging

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: log.py
nagare/services/: backtrace.py  logging.py
src/nagare/: log.py  logging.py
src/nagare/services/: backtrace.py  logging.py
tests/: logging_test.py
