[metadata]
name = nagare-services-logging
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Log service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-logging
    Tracker = https://github.com/nagareproject/services-logging/issues

[options]
zip_safe = False
packages = find:
install_requires =
    colorama
    chromalog
    nagare-services

[options.packages.find]
exclude = tests

[options.entry_points]
nagare.services =
    logging = nagare.services.logging:Logger

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
